# CppCmakeCatch2-cookiecutter

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
{{cookiecutter.project_name}}/App/: CMakeLists.txt
{{cookiecutter.project_name}}/App/src/: main.cpp
{{cookiecutter.project_name}}/App/vendors/: .keep
{{cookiecutter.project_name}}/Tests/: CMakeLists.txt
{{cookiecutter.project_name}}/Tests/src/: CatchMain.cpp
{{cookiecutter.project_name}}/Tools/: Purger.hs
{{cookiecutter.project_name}}/{{ cookiecutter.project_name }}/: CMakeLists.txt
{{cookiecutter.project_name}}/{{ cookiecutter.project_name }}/src/: {{ cookiecutter.project_name }}.hpp  {{ cookiecutter.project_name }}PCH.hpp
{{cookiecutter.project_name}}/{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_name }}/Core/: Core.hpp  Debug.hpp  Platform.hpp
